# rust-timecode-parser

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: decoder.rs  lib.rs
src/ltc_decoder/: mod.rs
src/ltc_decoder/bit_decoder/: mod.rs  sample_bounds.rs  sample_rater.rs  threshold_cross_detector.rs  zero_detector.rs
src/ltc_decoder/print_decoder/: mod.rs
src/ltc_frame/: ltc_frame_data.rs  mod.rs
src/src/: lib.rs
src/src/ltc_decoder/: bit_decoder.rs
