[package]
name = "timecode-coder"
version = "0.3.0"
authors = ["michaelhugi <michael.hugi@koeenix-band.ch>"]
edition = "2021"
description = "A pure Rust no_std library for decoding and encoding timecode in real-time"
readme="README.md"
repository="https://github.com/michaelhugi/rust-timecode-parser"
license="MIT"
exclude = [
    "testfiles/*",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
intbits = "0.2.0"
num-traits = "0.2.15"

[dev-dependencies]
wav = "1.0.0"
rand = "0.8.5"

[features]
decode_ltc = []
encode_ltc = []
debug = []
code_ltc = ["decode_ltc", "encode_ltc"]
default = ["debug", "decode_ltc", "encode_ltc"]